--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-material/core": "^1.3.7",
+    "axios": "^1.1.2",
+    "base-64": "^1.0.0",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "nativewind": "^2.0.11",
+    "purecloud-platform-client-v2": "^149.1.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
