--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native": "0.69.6",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "expo-asset": "~8.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
