--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
     "tailwindcss": "^3.1.8",
-    "expo-asset": "~8.6.1"
+    "expo-asset": "~8.6.1",
+    "lottie-react-native": "5.1.3",
+    "react-native-svg": "12.3.0",
+    "@expo/vector-icons": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
