--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-material/core": "^1.3.7",
     "axios": "^1.1.2",
     "base-64": "^1.0.0",
     "expo": "~46.0.13",
+    "expo-asset": "~8.6.1",
+    "expo-camera": "~12.3.0",
     "expo-status-bar": "~1.4.0",
+    "lottie-react-native": "5.1.3",
     "nativewind": "^2.0.11",
     "purecloud-platform-client-v2": "^149.1.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-svg": "12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
-    "tailwindcss": "^3.1.8",
-    "expo-asset": "~8.6.1",
-    "lottie-react-native": "5.1.3",
-    "react-native-svg": "12.3.0",
-    "@expo/vector-icons": "^13.0.0"
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
