--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "expo-updates": "~0.14.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": false
 }
